@@ -1,9 +1,6 @@
-package com.learning.employemanagementsystem.service.Impl;
+package com.learning.employemanagementsystem.service.impl;
 
-import com.learning.employemanagementsystem.dto.ApplyLeaveDto;
-import com.learning.employemanagementsystem.dto.ParseLeaveRequestDto;
-import com.learning.employemanagementsystem.dto.ParseLeaveResponseDto;
-import com.learning.employemanagementsystem.dto.ViewEmployeeLeavesDto;
+import com.learning.employemanagementsystem.dto.*;
 import com.learning.employemanagementsystem.entity.*;
 import com.learning.employemanagementsystem.exception.AlreadyFoundException;
 import com.learning.employemanagementsystem.exception.NotFoundException;
@@ -14,6 +11,9 @@ import com.learning.employemanagementsystem.service.LeaveService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -26,6 +26,8 @@ public class LeaveServiceImpl implements LeaveService {
     private final LeaveMapper leaveMapper;
 
     private final EmployeeRepository employeeRepository;
+
+    private static final String DATE_FORMAT = "yyyy-MM-dd";
 
     @Override
     public List<ParseLeaveResponseDto> parseLeave(ParseLeaveRequestDto parseLeaveDto) {
@@ -55,12 +57,13 @@ public class LeaveServiceImpl implements LeaveService {
         var appliedLeaves = leaveRepository.getAllByEmployeeUuid(employeeId);
 
         applyLeaveDto.stream()
-                .flatMap(leaveDto -> appliedLeaves.stream()
+                .map(ApplyLeaveDto::getDate)
+                .filter(leaveDate -> appliedLeaves.stream()
                         .map(Leave::getDate)
-                        .filter(dtoDate -> leaveDto.getDate().compareTo(dtoDate) == 1))
+                        .anyMatch(appliedLeaveDate -> leaveDate.compareTo(appliedLeaveDate) == 1))
                 .findFirst()
                 .ifPresent(date -> {
-                    throw new AlreadyFoundException("Leave Already applied for the date " +date);
+                    throw new AlreadyFoundException("Leave already applied for the date " + LocalDate.parse(new SimpleDateFormat(DATE_FORMAT).format(date), DateTimeFormatter.ofPattern(DATE_FORMAT)));
                 });
         var leaves = leaveMapper.applyLeaveDtoToLeaveDay(applyLeaveDto);
 
@@ -72,11 +75,10 @@ public class LeaveServiceImpl implements LeaveService {
 
     @Override
     public ViewEmployeeLeavesDto getLeavesByEmployeeId(UUID employeeId) {
-        var leaves = leaveRepository.getAllByEmployeeUuid(employeeId);
 
-        if (leaves.isEmpty()) {
-            throw new NotFoundException("No Applied Leaves");
-        }
+        var employee = isEmployeeExists(employeeId);
+
+        var leaves = leaveRepository.getAllByEmployeeUuid(employeeId);
 
         Map<LeaveStatus, List<Leave>> leaveStatusMap = new EnumMap<>(LeaveStatus.class);
 
@@ -89,6 +91,8 @@ public class LeaveServiceImpl implements LeaveService {
 
         return ViewEmployeeLeavesDto.builder()
                 .employeeUuid(employeeId)
+                .employeeFirstName(employee.getFirstName())
+                .employeeLastName(employee.getLastName())
                 .pastLeaves(dateLeavesmap.get(Boolean.FALSE))
                 .futureLeaves(dateLeavesmap.get(Boolean.TRUE))
                 .approvedLeaves(leaveStatusMap.get(LeaveStatus.APPROVED))
@@ -98,10 +102,41 @@ public class LeaveServiceImpl implements LeaveService {
                 .build();
     }
 
+    @Override
+    public List<ViewEmployeeLeavesDto> getAllEmployeesLeavesByManager(UUID managerUuid) {
+        isManager(managerUuid);
+        return employeeRepository.getAllByManagerUuid(managerUuid)
+                .stream()
+                .map(employee -> getLeavesByEmployeeId(employee.getUuid()))
+                .toList();
+    }
+
+    @Override
+    public SuccessResponseDto updateLeavesByManager(UUID managerUuid, LeaveStatus status, List<UpdateLeaveByManagerDto> leavesDto) {
+        isManager(managerUuid);
+
+        var leaves = leavesDto.stream()
+                .filter(leaveDto -> isLeaveEligibleForManager(leaveDto.getLeaveUuid(), managerUuid))
+                .map(leaveDto -> {
+                    var leave = getLeaveById(leaveDto.getLeaveUuid());
+                    leave.setStatus(status);
+                    leave.setComments(leaveDto.getComments());
+                    return leave;
+                })
+                .toList();
+
+        leaveRepository.saveAll(leaves);
+
+        return SuccessResponseDto.builder()
+                .success(true)
+                .data(status.toString())
+                .build();
+    }
+
     private List<Leave> filterLeavesByStatus(List<Leave> leaves, LeaveStatus status) {
         return leaves.stream()
                 .filter(leave -> leave.getStatus().equals(status))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void setLeaveDayStatus(List<Leave> leaves, LeaveStatus status) {
@@ -109,10 +144,29 @@ public class LeaveServiceImpl implements LeaveService {
     }
 
     private Employee isEmployeeExists(UUID employeeId) {
-        var employee = employeeRepository.findById(employeeId);
-        if (employee.isEmpty()) {
-            throw new NotFoundException("Didn't found employee with Id: " + employeeId);
+        return employeeRepository.findById(employeeId)
+                .orElseThrow(() -> new NotFoundException("Didn't found employee with Id: " + employeeId));
+    }
+
+    private void isManager(UUID uuid) {
+        var manager = isEmployeeExists(uuid);
+        if (manager.getIsManager().equals(Boolean.FALSE)) {
+            throw new NotFoundException("User is not a Manager");
         }
-        return employee.get();
+    }
+
+    private Leave getLeaveById(UUID leaveUuid) {
+        return leaveRepository.findById(leaveUuid)
+                .orElseThrow(() -> new NotFoundException("leave not found with id : " + leaveUuid));
+    }
+
+    private Boolean isLeaveEligibleForManager(UUID leaveUuid, UUID managerUuid) {
+        var leave = getLeaveById(leaveUuid);
+        if (leave.getEmployee().getManager() == null) {
+            throw new NotFoundException("Manager Not found for this colleague to approve leave");
+        } else if (Boolean.FALSE.equals(leave.getEmployee().getManager().getUuid().equals(managerUuid))) {
+            throw new NotFoundException("Invalid manager trying to approve the request");
+        }
+        return Boolean.TRUE;
     }
 }
